Ajout des Resources

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
     <header class="navbar">
         <nav class="contenu">
             <img alt="logo de ressources relationnelles" th:src="@{/images/Logo.png}" width="100" class="logo"/>
-            <a href="#home" class="active">Home</a>
+            <a th:href="@{/creation_publication}">Créer une publication</a>
             <a href="#news">News</a>
             <a href="#contact">Contact</a>
             <div id="connection">
